# eela-ecommerce

./: README.md  manage.py  pyproject.toml
.github/workflows/: main_eelaecommercegv.yml
data/: products.csv
eelaecommerce/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: categoria_feeder.py  producto_feeder.py
static/js/: store.js
store/: admin.py  apps.py  cart_session.py  context_processors.py  forms.py  urls.py  views.py
store/migrations/: 0001_initial.py
store/models/: __init__.py  categoria.py  itempedido.py  pedido.py  producto.py
store/templates/: cart.html  catalog.html  index.html  signin.html  signup.html  success_signup.html
